# sloppy-sdss-access

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml  update-registry.yml
docs/: go.mod  hugo.toml
docs/_vendor/: modules.txt
docs/assets/: _chroma.scss  _custom.scss
docs/content/: _index.md
docs/content/docs/: authentication.md  installation.md  introduction.md  limitations.md  migrating.md  path-resolution.md  quickstart.md  registry.md  releases.md  remote-access.md
src/sloppy_sdss_access/: __init__.py  _build.py  access.py  auth.py  compat.py  derive.py  paths.py  registry.py
src/sloppy_sdss_access/data/: registry.json
tests/: test_auth.py  test_compat.py  test_paths.py
tools/: build_registry.py  parity_check.py
